--- a/DockerFile
+++ b/DockerFile
@@ -31,4 +31,9 @@ ENV PATH="/usr/local/bin/chromedriver:${PATH}"
 # 3. Install selenium in Python
 RUN pip install -U selenium
 
+# 4. Install other packages in requirements.txt
+RUN cd /home/site/wwwroot && \
+    pip install -r requirements.txt
+
+# 5. Finally, copy python code to image
 COPY . /home/site/wwwroot
